--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-        <com.example.compassview.CompassView
+        <com.example.compassview.view.CompassView
             android:id="@+id/compassView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
